fixed div misalignment

--- a/button.css
+++ b/button.css
@@ -122,7 +122,7 @@ ul{
   font-family: avenir-light;
   font-size: 300%;
   padding-top: 1%;
-  padding-bottom: 2%;
+  padding-bottom: 3%;
   /*background: linear-gradient(90deg,#fce3ec,#ffe8cc)*/;
 
 
